--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ header>p {
     font-size: 1.2em;
     max-width: 600px;
     margin: auto;
-    margin-bottom: 10px;
+    padding-bottom: 30px;
     padding: 0 10px 0 10px;
     text-shadow: 2px 2px 0 #00000069;
 }
